<resources>
    <string name="app_name" translatable="false">TIP</string>
    <string name="title">Summary</string>
    <string name="subtitle">Account summary below</string>
    <string name="total">Order Total:</string>
    <string name="n_people">Guests:</string>
    <string name="percentage">Gratuity:</string>
    <string name="total_per_person">Total per guest:</string>
    <string name="tip_calculator">TIP calculator</string>
    <string name="main_subtitle">Fill in the fields below to calculate the gratuity on your bill:</string>
    <string name="main_total">Order total:</string>
    <string name="main_n_people">Guests:</string>
    <string name="main_percentage">Gratuity:</string>
    <string name="refresh">Refresh</string>
    <string name="clean">Clean</string>
    <string name="calculate">Calculate</string>
    <string name="total_hint">$ 250.00</string>
    <string name="guests_hint">5</string>
    <string name="gratuity_hint">10%</string>
</resources>