<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/tv_Title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_Title"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title" />

    <TextView
        android:id="@+id/tv_total_table_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@+id/tv_SubTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_SubTitle" />

    <TextView
        android:id="@+id/tv_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="R$ 200,00"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/tv_total_table_label" />

    <TextView
        android:id="@+id/tv_total_people_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/n_people"
        app:layout_constraintStart_toStartOf="@+id/tv_total_table_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_table_label" />

    <TextView
        android:id="@+id/tv_total_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_people_label"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/percentage"
        app:layout_constraintStart_toStartOf="@+id/tv_total_people_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_people_label" />

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_percentage_label"
        tools:text="10%" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_percentage_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_total_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_per_person"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_percentage_label"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        tools:text="44.00"
        android:textSize="24sp"
        android:textStyle="bold"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_total_amount_label" />

    <Button
        android:id="@+id/btn_redo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>